apps-helm/immich/manifests/ingress-tailscale.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-tailscale
  annotations:
    tailscale.com/proxy-group: ingress-proxies
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  tls:
  - hosts:
    - isometric-local
  defaultBackend:
    service:
      name: immich-server
      port:
        number: 80
  ingressClassName: tailscale
